--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="Images/favicon.svg" />
+    <link rel="icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
     <title>Dimas Mohammad Makdus | Portfolio</title>
     <meta charset="utf-8" />
     <meta property="og:title" content="Dimas Mohammad Makdus | Portfolio">
-    <meta name="keywords" content="Dimas Mohammad Makdus,Dimas,Code Dimas,Portfolio Dimas Mohammad Makdus,Freelance website developer">
+    <meta name="keywords" content="Dimas Mohammad Makdus,Dimas,Code Dimas,Portfolio Dimas Mohammad Makdus,Freelance website full stack developer">
     <meta property="og:description" content="Hi! I'm Dimas, an enthusiastic Full Stack Developer and expert in web development, working on various projects involving front-end and back-end development for various clients and industries." name="description">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image" content="Images/foto-dimas.jpg">
@@ -21,8 +21,8 @@
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website">
     <meta property="og:type" content="article">
-    <meta property="article:author" content="https://dimasmakdus.com/">
-    <meta property="og:site_name" content="dimasmakdus.com">
+    <meta property="article:author" content="https://dimasmakdus.id/">
+    <meta property="og:site_name" content="dimasmakdus.id">
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
